force-app/main/default/objects/Investment__c/fields/Allocated_Amount__c.field-meta.xml
<CustomField>
    <fullName>Allocated_Amount__c</fullName>
    <formula>ETF__r.Allocation__c  *  Total_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Represents the amount allocated to this ETF, in the total investment amount.</inlineHelpText>
    <label>Allocated Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>