force-app/main/default/objects/Investment__c/fields/Brokerage__c.field-meta.xml
<CustomField>
    <fullName>Brokerage__c</fullName>
    <label>Brokerage Charges</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>