force-app/main/default/objects/Investment__c/fields/Date_of_Investment__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Investment__c</fullName>
    <label>Date of Investment</label>
    <required>true</required>
    <type>Date</type>
</CustomField>