force-app/main/default/objects/Investment__c/fields/ETF__c.field-meta.xml
<CustomField>
    <fullName>ETF__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exchange Traded Fund (ETF)</label>
    <referenceTo>ETF__c</referenceTo>
    <relationshipLabel>Investments</relationshipLabel>
    <relationshipName>Investments</relationshipName>
    <type>Lookup</type>
</CustomField>