force-app/main/default/objects/Investment__c/fields/ETF_Market__c.field-meta.xml
<CustomField>
    <fullName>ETF_Market__c</fullName>
    <description>This is a backend field, created to use for reporting purposes.</description>
    <formula>TEXT(ETF__r.Market__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ETF Market</label>
    <type>Text</type>
</CustomField>