force-app/main/default/objects/Investment__c/fields/Income__c.field-meta.xml
<CustomField>
    <fullName>Income__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Income</label>
    <referenceTo>Income__c</referenceTo>
    <relationshipLabel>Investments</relationshipLabel>
    <relationshipName>Investments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>