force-app/main/default/objects/Investment__c/fields/Invested_Amount__c.field-meta.xml
<CustomField>
    <fullName>Invested_Amount__c</fullName>
    <label>Invested Amount</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>