force-app/main/default/objects/Investment__c/fields/Investment_Type__c.field-meta.xml
<CustomField>
    <fullName>Investment_Type__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Investment Type</label>
    <referenceTo>Investment_Type__c</referenceTo>
    <relationshipLabel>Investments</relationshipLabel>
    <relationshipName>Investments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>