force-app/main/default/objects/Investment__c/fields/Investor__c.field-meta.xml
<CustomField>
    <fullName>Investor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Investor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Investments</relationshipName>
    <type>Lookup</type>
</CustomField>