force-app/main/default/objects/Investment__c/fields/Market_Price__c.field-meta.xml
<CustomField>
    <fullName>Market_Price__c</fullName>
    <description>It is the price at which shares in the ETF can be bought or sold on exchanges during trading hours.</description>
    <formula>Invested_Amount__c  /  Units_Purchased__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Market Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>