force-app/main/default/objects/Investment__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <label>Name</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nippon India ETF Nifty 50 BeES (NIFTYBEES)</fullName>
            </value>
            <value>
                <fullName>Nippon India ETF Nifty Midcap 150 (MID150BEES)</fullName>
            </value>
            <value>
                <fullName>HDFC NIFTY Smallcap 250 ETF (HDFCSML250)</fullName>
            </value>
            <value>
                <fullName>Nippon India ETF Gold BeES (GOLDBEES)</fullName>
            </value>
            <value>
                <fullName>Mirae Asset S&amp;P 500 Top 50 ETF (MASPTOP50)</fullName>
            </value>
            <value>
                <fullName>Motilal Oswal MOSt Shares NASDAQ-100 ETF (MON100)</fullName>
            </value>
            <value>
                <fullName>Mirae Asset NYSE FANG+ ETF (MAFANG)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>