force-app/main/default/objects/Investment__c/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <inlineHelpText>It is the amount to be invested in the ETFs, based on the Market (Domestic/International).</inlineHelpText>
    <label>Total Amount</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>