force-app/main/default/objects/Investment__c/fields/Units_Purchased__c.field-meta.xml
<CustomField>
    <fullName>Units_Purchased__c</fullName>
    <label>Units Purchased</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>