force-app/main/default/objects/Investment__c/fields/Variance__c.field-meta.xml
<CustomField>
    <fullName>Variance__c</fullName>
    <formula>IF(Invested_Amount__c  &lt;= Allocated_Amount__c,  
    IMAGE(&quot;/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=068J200000Ew9dG&amp;operationContext=CHATTER&amp;contentId=05TJ200000okEqN&quot;, &quot;Green&quot;, 20, 20), 
    IMAGE(&quot;/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=068J200000Ew9dH&amp;operationContext=CHATTER&amp;contentId=05TJ200000okEqX&quot;, &quot;Yellow&quot;, 20, 20))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>A visual indicator that shows the comparison between Investment Amount &amp; Allocated Amount. Invested Amount &lt;= Allocated Amount: Green | Invested Amount &gt; Allocated Amount: Yellow</inlineHelpText>
    <label>Variance</label>
    <type>Text</type>
</CustomField>