force-app/main/default/objects/Investment__c/recordTypes/ETF_Investment.recordType-meta.xml
<RecordType>
    <fullName>ETF_Investment</fullName>
    <active>true</active>
    <description>This Record Type is used for all the Exchange Traded Fund (ETF) investments.</description>
    <label>ETF Investment</label>
</RecordType>