force-app/main/default/objects/Investment__c/recordTypes/Non_ETF_Investment.recordType-meta.xml
<RecordType>
    <fullName>Non_ETF_Investment</fullName>
    <active>true</active>
    <description>This Record Type is used for all the Non ETF investments such as PPF, RD.</description>
    <label>Non ETF Investment</label>
</RecordType>