force-app/main/default/objects/Investment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Income__c</columns>
    <columns>Investment_Type__c</columns>
    <columns>Invested_Amount__c</columns>
    <columns>Date_of_Investment__c</columns>
    <columns>Additional_Notes__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>